--- a/.github/workflows/download-twitch-stream.yml
+++ b/.github/workflows/download-twitch-stream.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Install yt-dlp
       run: python -m pip install --upgrade yt-dlp
 
+    - name: Install FFmpeg
+      run: sudo apt-get update && sudo apt-get install -y ffmpeg
+      
     - name: Download Twitch Stream
       run: yt-dlp -o "%(title)s.%(ext)s" ${{ github.event.inputs.stream_url }}
       
