--- a/.github/workflows/download-twitch-stream.yml
+++ b/.github/workflows/download-twitch-stream.yml
@@ -32,8 +32,10 @@ jobs:
       id: extract-title
       run: echo "STREAM_TITLE=$(yt-dlp --get-title ${{ github.event.inputs.stream_url }})" >> $GITHUB_ENV
 
-    - name: Download Stream
-      run: yt-dlp -o "${{ env.STREAM_TITLE }}.%(ext)s" ${{ github.event.inputs.stream_url }}
+    - name: Download Stream Segment
+      # Attempt to limit download time; this is more illustrative than functional
+      # as yt-dlp does not have a built-in way to limit download duration directly
+      run: timeout 300 yt-dlp -o "${{ env.STREAM_TITLE }}.%(ext)s" ${{ github.event.inputs.stream_url }}
 
     - name: Upload Stream as Artifact
       uses: actions/upload-artifact@v2
