--- a/.github/workflows/download-twitch-stream.yml
+++ b/.github/workflows/download-twitch-stream.yml
@@ -7,8 +7,6 @@ on:
         description: 'Twitch Stream URL'
         required: true
         default: 'https://www.twitch.tv/smallant'
-  schedule:
-    - cron: '*/5 * * * *' # Runs every 10 minutes, adjust the timing here as needed
 
 jobs:
   download:
@@ -42,3 +40,14 @@ jobs:
       with:
         name: ${{ env.STREAM_TITLE }}
         path: ./*
+        
+    - name: Trigger Another Workflow or Action via Curl
+      run: |
+        curl \
+          -X POST \
+          -H "Authorization: token ${{ secrets.YOUR_PERSONAL_ACCESS_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          https://api.github.com/repos/OWNER/REPO/actions/workflows/WORKFLOW_ID/dispatches \
+          -d '{"ref":"REF", "inputs": {"key": "value"}}'
+      env:
+        YOUR_PERSONAL_ACCESS_TOKEN: ${{ secrets.YOUR_GITHUB_TOKEN }}
