--- a/.github/workflows/download-twitch-stream.yml
+++ b/.github/workflows/download-twitch-stream.yml
@@ -47,7 +47,7 @@ jobs:
           -X POST \
           -H "Authorization: token ${{ secrets.YOUR_PERSONAL_ACCESS_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/OWNER/REPO/actions/workflows/WORKFLOW_ID/dispatches \
-          -d '{"ref":"REF", "inputs": {"key": "value"}}'
+          https://api.github.com/repos/comprefg/TwitchDL/actions/workflows/download-twitch-stream/dispatches \
+          -d '{"ref":"REF", "inputs": {"stream_url": "https://www.twitch.tv/smallant"}}'
       env:
         YOUR_PERSONAL_ACCESS_TOKEN: ${{ secrets.YOUR_GITHUB_TOKEN }}
