--- a/.github/workflows/download-twitch-stream.yml
+++ b/.github/workflows/download-twitch-stream.yml
@@ -8,11 +8,6 @@ on:
         required: true
         default: 'https://www.twitch.tv/smallant'
         
-      max_size:
-        description: 'max size in mb'
-        required: true
-        default: '936m'
-
 jobs:
   download:
     runs-on: ubuntu-latest
@@ -38,7 +33,7 @@ jobs:
     - name: Download Stream Segment
       # Attempt to limit download time; this is more illustrative than functional
       # as yt-dlp does not have a built-in way to limit download duration directly
-      run: yt-dlp -o "${{ env.STREAM_TITLE }}.%(ext)s" --max-filesize 10m ${{ github.event.inputs.stream_url }}
+      run: yt-dlp -o "${{ env.STREAM_TITLE }}.%(ext)s" ${{ github.event.inputs.stream_url }}
 
     - name: Upload Stream as Artifact
       uses: actions/upload-artifact@v2
@@ -46,13 +41,4 @@ jobs:
         name: ${{ env.STREAM_TITLE }}
         path: ./*
         
-    - name: Trigger Another Workflow or Action via Curl
-      run: |
-        curl \
-          -X POST \
-          -H "Authorization: token ${{ secrets.YOUR_PERSONAL_ACCESS_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/comprefg/TwitchDL/actions/workflows/download-twitch-stream/dispatches \
-          -d '{"ref":"REF", "inputs": {"stream_url": "https://www.twitch.tv/smallant","max_size": "936m"}}'
-      env:
-        YOUR_PERSONAL_ACCESS_TOKEN: ${{ secrets.YOUR_GITHUB_TOKEN }}
+ 
