--- a/.github/workflows/download-twitch-stream.yml
+++ b/.github/workflows/download-twitch-stream.yml
@@ -27,11 +27,10 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y ffmpeg
       
     - name: Extract Stream Title
-      id: extract-title
-      run: |
-          STREAM_TITLE=$(yt-dlp --get-title ${{ github.event.inputs.stream_url }})
-          SANITIZED_TITLE=$(echo "$STREAM_TITLE" | sed 's/[":<>|*?\r\n\\\/]/-/g')
-          echo "SANITIZED_TITLE=$SANITIZED_TITLE" >> $GITHUB_ENV
+      id: sanitize-title
+        run:|
+          STREAM_TITLE=$(yt-dlp --get-title ${{ github.event.inputs.stream_url }} | sed 's/[":<>|*?\\/\r\n]/-/g')
+          echo "SANITIZED_STREAM_TITLE=$STREAM_TITLE" >> $GITHUB_ENV
 
     - name: Download Stream Segment
       # Attempt to limit download time; this is more illustrative than functional
