--- a/.github/workflows/download-twitch-stream.yml
+++ b/.github/workflows/download-twitch-stream.yml
@@ -41,6 +41,7 @@ jobs:
 
     - name: Download Stream Segment
       run: timeout ${{ github.event.inputs.timeour }} yt-dlp -o "${{ env.SANITIZED_TITLE }}.%(ext)s" ${{ github.event.inputs.stream_url }}
+      continue-on-error: true
 
     - name: Upload Stream as Artifact
       uses: actions/upload-artifact@v2
