--- a/.github/workflows/download-twitch-stream.yml
+++ b/.github/workflows/download-twitch-stream.yml
@@ -7,11 +7,20 @@ on:
         description: 'Twitch Stream URL'
         required: true
         default: 'https://www.twitch.tv/smallant'
-
       timeout:
         description: 'timeout'
         required: true
         default: '5h'
+      bitrate:
+        description: 'Desired bitrate (e.g., 800k for 800 kb/s)'
+        required: false
+        default: '800k'
+
+      resolution:
+        description: 'Desired resolution (e.g., 1280x720)'
+        required: false
+        default: 'res:480'
+
         
 jobs:
   download:
@@ -40,7 +49,7 @@ jobs:
         echo "SANITIZED_TITLE=$(echo $STREAM_TITLE | sed 's/[":<>|*?\\/\r\n]//g')" >> $GITHUB_ENV
 
     - name: Download Stream Segment
-      run: timeout ${{ github.event.inputs.timeout }} yt-dlp --hls-use-mpegts -o "${{ env.SANITIZED_TITLE }}.%(ext)s" ${{ github.event.inputs.stream_url }}
+      run: timeout ${{ github.event.inputs.timeout }} yt-dlp --hls-use-mpegts -S ${{ github.event.inputs.resolution }} -o "${{ env.SANITIZED_TITLE }}.%(ext)s" ${{ github.event.inputs.stream_url }}
       continue-on-error: true
 
     - name: Upload Stream as Artifact
